<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/court"
    android:layout_margin="25dp"
    android:padding="10dp"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/iv_basket_icon_gof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_basketball"
        android:contentDescription="@string/iv_description_tf" />

    <TextView
        android:id="@+id/tv_team_one_final_score_gof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/team_final_score"
        android:textAlignment="center"
        android:textColor="@color/team1"
        android:textSize="36sp"
        android:padding="20dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_team_two_final_score_gof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/team_final_score"
        android:textAlignment="center"
        android:textColor="@color/team2"
        android:textSize="36sp"
        android:padding="20dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_winner_team_gof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/team_final_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:padding="20dp"
        android:inputType="text" />
8
    <Button
        android:id="@+id/bt_new_game_gof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ewing"
        android:text="@string/new_game"
        android:textSize="36sp"
        android:fontFamily="@font/squada_one"
        android:padding="10dp"
        app:cornerRadius="20dp" />



    <ImageView
        android:id="@+id/iv_basket_icon_bottom_gof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_basketball"
        android:contentDescription="@string/iv_description_tf" />


</LinearLayout>